# Wormhole

./: .cursorrules  .gitignore  .npmrc  .vercelignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  config.example.toml  package.json  pnpm-lock.yaml
.claude/commands/: add-feature.md  debug-issue.md  implement-phase.md  marketing-copy.md  optimize-performance.md  review-code.md  security-audit.md  write-tests.md
.cursor/rules/: documentation-reference.mdc  frontend.mdc  marketing-brand.mdc  rust-best-practices.mdc  rust-testing.mdc  wormhole.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: create_icons.py  icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: ErrorBoundary.tsx  Homepage.tsx  SetupWizard.tsx  TransferProgress.tsx  WindowControls.tsx
apps/desktop/src/hooks/: useFavorites.ts  useFileIndex.ts  useProjects.ts  useRecentFiles.ts  useTelemetry.ts  useTransfers.ts  useWormholeHistory.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/types/: favorites.ts  history.ts  (+4 more)
apps/teleport-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/teleport-ui/src/: App.test.tsx  App.tsx  index.css
apps/teleport-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/teleport-ui/src-tauri/src/: commands.rs  lib.rs
apps/web/: eslint.config.mjs  package.json
crates/teleport-core/: Cargo.toml
crates/teleport-core/src/: buffer_pool.rs  compression.rs  config.rs  crypto.rs  error.rs  lib.rs  path.rs  protocol.rs  types.rs
crates/teleport-core/src/io/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/teleport-daemon/: Cargo.toml  build.rs
crates/teleport-daemon/benches/: throughput.rs
crates/teleport-daemon/src/: bridge.rs  bulk_transfer.rs  cache.rs  client.rs  connection_manager.rs  dedup_index.rs  disk_cache.rs  fuse.rs  gc.rs  global.rs  governor.rs  host.rs  lib.rs  lock_manager.rs  multi_fuse.rs  multi_host.rs  net.rs  rate_limiter.rs  rendezvous.rs  stream_pool.rs  sync_engine.rs  updater.rs  winfsp.rs
crates/teleport-signal/: Cargo.toml
crates/teleport-signal/src/: lib.rs  messages.rs  room.rs  server.rs  storage.rs
deploy/signal-server/: Dockerfile  docker-compose.yml  fly.toml
doc/: CONTRIBUTING.md
doc/development/: 00-master-implementation-plan.md  01-testing-strategy.md  02-security-guide.md  03-architecture-decisions.md  05-api-reference.md  06-troubleshooting.md  07-performance-benchmarks.md  08-deployment-guide.md  09-state-machines.md  10-data-structures.md  12-configuration-schema.md  14-fuse-async-bridge-spike.md  15-platform-compatibility-matrix.md
doc/development/phase-1-hello-world-fs/: 1-overview.md  10-notes.md  3-architecture.md  4-scope.md  6-testing-and-metrics.md  7-risks-and-mitigations.md  9-open-questions.md
doc/development/phase-2-p2p-tunnel/: 3-architecture.md  4-scope.md  5-implementation-plan.md
doc/development/phase-3-integration/: 1-overview.md  10-notes.md  6-testing-and-metrics.md  7-risks-and-mitigations.md  8-deliverables.md  9-open-questions.md
doc/development/phase-4-performance-caching/: 2-goals.md  4-scope.md  8-deliverables.md  9-open-questions.md
doc/development/phase-5-product-wrapper/: 10-notes.md  3-architecture.md  4-frontend-architecture.md  4-scope.md  5-implementation-plan.md  7-risks-and-mitigations.md  9-open-questions.md
doc/development/phase-6-security-compliance/: 2-goals.md  6-testing-and-metrics.md  8-deliverables.md  9-open-questions.md
doc/development/phase-7-release-ops/: 1-overview.md  10-notes.md  2-goals.md  3-architecture.md  4-scope.md  7-risks-and-mitigations.md  9-open-questions.md
doc/marketing/: 00-marketing-overview.md  03-customer-acquisition.md  05-advertising-channels.md  06-guerrilla-marketing.md  08-monetization-strategy.md
docs/: CONTRIBUTING.md  USER-GUIDE.md
docs/development/: 00-master-implementation-plan.md  01-testing-strategy.md  04-protocol-specification.md  06-troubleshooting.md  07-performance-benchmarks.md  08-deployment-guide.md  10-data-structures.md  11-error-handling.md  12-configuration-schema.md  13-edge-cases.md  feature-research-analysis.md  top-features-summary.md
docs/development/phase-1-hello-world-fs/: 2-goals.md  5-implementation-plan.md  8-deliverables.md
docs/development/phase-2-p2p-tunnel/: 1-overview.md  10-notes.md  2-goals.md  6-testing-and-metrics.md  7-risks-and-mitigations.md  8-deliverables.md  9-open-questions.md
docs/development/phase-3-integration/: 2-goals.md  3-architecture.md  4-scope.md  5-implementation-plan.md
docs/development/phase-4-performance-caching/: 1-overview.md  10-notes.md  3-architecture.md  5-implementation-plan.md  6-testing-and-metrics.md  7-risks-and-mitigations.md
docs/development/phase-5-product-wrapper/: 1-overview.md  2-goals.md  3-architecture.md  4-frontend-architecture.md  5-implementation-plan.md  6-testing-and-metrics.md  8-deliverables.md
docs/development/phase-6-security-compliance/: 1-overview.md  10-notes.md  3-architecture.md  4-scope.md  5-implementation-plan.md  7-risks-and-mitigations.md
docs/development/phase-7-release-ops/: 5-implementation-plan.md  6-testing-and-metrics.md  8-deliverables.md
docs/development/phase-8-high-perf-transfers/: 1-overview.md  10-notes.md  2-goals.md  3-architecture.md  4-scope.md  5-implementation-plan.md  6-testing-and-metrics.md  7-risks-and-mitigations.md  8-deliverables.md  9-open-questions.md
docs/marketing/: 01-target-audience-strategy.md  02-brand-identity.md  04-investor-pitch.md  07-outreach-targets.md
scripts/: benchmark.sh  install.ps1  install.sh  macos-fix-gatekeeper.sh  uninstall.sh  verify-security.sh
(+67 files in other folders)
