[workspace]
resolver = "2"
members = [
    "crates/teleport-core",
    "crates/teleport-daemon",
    "crates/teleport-signal",
    "apps/teleport-ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wormhole-team/wormhole"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "rt-multi-thread"] }

# QUIC networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# FUSE filesystem
fuser = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"

# Crypto
blake3 = "1.5"
spake2 = "0.4"
getrandom = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
bytes = "1.5"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
libc = "0.2"
directories = "5.0"
sha2 = "0.10"

# Signal server
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"

# Misc
rcgen = "0.12"
hostname = "0.4"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster builds during development
opt-level = 0
debug = true
