[workspace]
resolver = "2"
members = [
    "crates/teleport-core",
    "crates/teleport-daemon",
    "crates/teleport-signal",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wormhole-team/wormhole"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "rt-multi-thread"] }

# QUIC networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# FUSE filesystem (Unix-only)
# Note: fuser is only available on Unix systems (Linux, macOS)
# Windows uses WinFSP instead
fuser = "0.15"

# WinFSP filesystem (Windows-only)
# Note: winfsp provides Windows filesystem support similar to FUSE
# Licensed under GPL-3.0 with FLOSS exception (compatible with MIT/Apache-2.0)
winfsp = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"

# Crypto
blake3 = "1.5"
spake2 = "0.4"
getrandom = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
bytes = "1.5"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
libc = "0.2"
directories = "5.0"
sha2 = "0.10"

# Signal server
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"

# Misc
rcgen = "0.12"
hostname = "0.4"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client for updates
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# Version comparison
semver = "1.0"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Testing
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

# Compression (Phase 8)
zstd = "0.13"

# Async trait (Phase 8)
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster builds during development
opt-level = 0
debug = true
