[package]
name = "teleport-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wormhole signaling server for peer discovery"

[dependencies]
teleport-core = { path = "../teleport-core" }

# Async runtime
tokio = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
dashmap = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
