[package]
name = "teleport-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wormhole signaling server for peer discovery"

[[bin]]
name = "wormhole-signal"
path = "src/bin/signal.rs"

[dependencies]
teleport-core = { path = "../teleport-core" }

# Async runtime
tokio = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
dashmap = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }

# CLI
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
