[package]
name = "wormhole-desktop"
version = "0.1.0"
description = "Wormhole Desktop Application"
authors = ["Wormhole Team"]
edition = "2021"

[lib]
name = "wormhole_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Use workspace dependencies for core functionality
teleport-daemon = { path = "../../../crates/teleport-daemon" }
teleport-core = { path = "../../../crates/teleport-core" }

# Utilities
hostname = "0.4"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"

# FUSE for mounting (Unix only - Linux, macOS)
[target.'cfg(unix)'.dependencies]
fuser = { workspace = true }

# WinFSP for mounting (Windows only)
[target.'cfg(windows)'.dependencies]
winfsp = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winfsp = { workspace = true }

# macOS-specific dependencies for window customization
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
