[package]
name = "teleport-ui"
version = "0.1.0"
description = "Wormhole Desktop Application"
authors = ["Wormhole Team"]
edition = "2021"

[lib]
name = "teleport_ui_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Use workspace dependencies for core functionality
teleport-daemon = { path = "../../../crates/teleport-daemon" }
teleport-core = { path = "../../../crates/teleport-core" }

# FUSE for mounting - use workspace version to match teleport-daemon
fuser = { workspace = true }
hostname = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
